--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,11 +20,14 @@ header h1 {
   padding: 30px;
   border-radius: 8px;
   margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 .search-form {
   display: grid;
   gap: 20px;
+  min-width: 400px;
   max-width: 500px;
 }
 
@@ -59,6 +62,8 @@ header h1 {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  width: 250px;
+  margin: auto;
 }
 
 .btn-primary {
@@ -73,7 +78,6 @@ header h1 {
 .btn-secondary {
   background-color: #95a5a6;
   color: white;
-  margin-left: 10px;
 }
 
 .btn-secondary:hover {
